--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=https://lci-rwanda.onrender.com
+REACT_APP_API_URL=https://lci-api.onrender.com
+GENERATE_SOURCEMAP=false
+DISABLE_ESLINT_PLUGIN=true
